Mostly fix content overflowing

--- a/src/app.css
+++ b/src/app.css
@@ -18,5 +18,5 @@ body {
 
 #app {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
